#1046170 (follow up) by agentrickard: Provide a better documentation for the problem.
#1070112 by drunken_monkey: Fix notice in field_views_field_label.
#978824 by dereine: Don't execute validation on config_item remove button.
by dereine: Convert op_shorter/longer in filter_string to add_where_expression.

Views 3.x-7.x-alpha1 (05-Jan-2011)
==================================

#914102 by torelad: Correct placeholder in views_date_sql_format.
#931582 by bec: Provide integration of {file_usage} table.
by dereine: Fix in_operator test.
by dereine: Fix more testcases by adding $this->resetAll().
#931886 by bojanz: Remove views_handler_filter_float because numeric handler + dbtng does everything.
#932792 by bec: Extras for formatting {file_managed} fields.
by dereine: Move file_* handlers to extra files.
#934086 by dereine: Attach the contextual links library only once.
#917402 by yhahn: Update taxonomy handlers for d7 changes.
#930582 by berdir, Damz, dereine: Fix query substitutions for subqueries.
#711860 by dereine: 00 entered in pager total fails.
#889770 by tim.plunkett: Empty fields not always hidden based on row settings.
#762484 by master-of-magic: Link to node status could be lost between rows.
#908272 by jaydub: Fix incorrect length of view description form field.
#772782 by mstrelan: Menu normal item menu should default to system default menu rather than  "navigation".
#571234 by dereine: Better handling of invalid exposed filters or other methods that cause a view to abort during the build process.
#685554 by MyXelf: Illegal characters in View tag translated improperly when used in theming templates.
#508832 by nick_vh: Documentation improvement on templates.
#887220 by dereine: Fix fatal error when using GROUP BY.
#930714 by brad.bulger: Add aggregator GUID field.
#936828 by xjm: Empty field replacement not quite always working.
#872000 by NaX: Comment edit field needs option to set destination so it can work like comment edit field.